# sbc-log-plotter

./: .gitignore  AUTHORS  README.md  pixi.toml  pyproject.toml  requirements.txt
sbc_log_plotter/: __init__.py  catalog.py  export.py  gui.py  model.py  plotting.py  sbc_log_io.py  signal_pipeline.py  state.py
tests/: test_standalone_import.py
